--- a/src/objects.properties
+++ b/src/objects.properties
@@ -1,3 +1,6 @@
 #Browser config
 browser = chrome
-chrome_path = D:/zsetup/Chrome/chromedriver.exe
+chrome_path = D:/Anhttv14/selenium/Chrome/chromedriver.exe
+#team = 6 : Kinh doanh duoc
+# = 7 : Quang cao
+team = 6 
