--- a/src/objects.properties
+++ b/src/objects.properties
@@ -3,4 +3,5 @@ browser = chrome
 chrome_path = D:/Anhttv14/selenium/Chrome/chromedriver.exe
 #team = 6 : Kinh doanh duoc
 # = 7 : Quang cao
+# = 8  : Thanh tra duoc
 team = 6 
