--- a/src/objects.properties
+++ b/src/objects.properties
@@ -4,4 +4,5 @@ chrome_path = D:/Anhttv14/selenium/Chrome/chromedriver.exe
 #team = 6 : Kinh doanh duoc
 # = 7 : Quang cao
 # = 8  : Thanh tra duoc
-team = 6 
+# = 2 : HQMC
+team = 2
