--- a/src/objects.properties
+++ b/src/objects.properties
@@ -1,6 +1,6 @@
 #Browser config
 browser = chrome
-chrome_path = D:/zsetup/Chrome/chromedriver.exe
+chrome_path = E:\\setup\\browerdriver\\chromedriver.exe
 #team = 6 : Kinh doanh duoc
 # = 7 : Quang cao
 # = 8  : Thanh tra duoc
