--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>rtcIBM</name>
+	<name>RtcIBM</name>
 	<comment></comment>
 	<projects>
 		<project>Drug</project>
