Nhập nhiều sprint nhiều task

--- a/src/objects.properties
+++ b/src/objects.properties
@@ -1,8 +1,5 @@
 #Browser config
 browser = chrome
 chrome_path = E:\\setup\\browerdriver\\chromedriver.exe
-#team = 6 : Kinh doanh duoc
-# = 7 : Quang cao
-# = 8  : Thanh tra duoc
-# = 2 : HQMC
-team = 2
+datasource = xml
+source_path = src/test/resources/data/Task.xml
